--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <p>
         <a href="./public/movie-ranking.html" draggable="true">Movie Ranking Project</a>
         <br/>
-        <img src="assets/images/movie-ranking.jpg" height="200" />
+        <img src="assets/images/movie-ranking.jpg" height="200 alt="movie ranking image" />
     </p>
     <a href="./public/birthday-invite.html" draggable="true">Birthday Invite Project</a>
     <br/>
-    <img src="assets/images/birthday-invite.jpg" height="200" />
+    <img src="assets/images/birthday-invite.jpg" height="200" alt="Birthday invite  image" />
     <hr/>
     <a href="./public/about.html" draggable="true">About Me</a>
     <a href="./public/contact.html" draggable="true">Contact Me</a>
