--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <h2>I am a Web Developer</h2>
     <hr>
     <p>
-        <a href="./public/movie-ranking.html" draggable="true">Movie Ranking Project</a>
+        <h3><a href="./public/movie-ranking.html" draggable="true">Movie Ranking Project</a></h3>
         <br/>
         <img src="assets/images/movie-ranking.jpg" height="200 alt="movie ranking image" />
     </p>
-    <a href="./public/birthday-invite.html" draggable="true">Birthday Invite Project</a>
+   <h3><a href="./public/birthday-invite.html" draggable="true">Birthday Invite Project</a></h3>
     <br/>
     <img src="assets/images/birthday-invite.jpg" height="200" alt="Birthday invite  image" />
     <hr/>
