--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>
         <h3><a href="./public/movie-ranking.html" draggable="true">Movie Ranking Project</a></h3>
         <br/>
-        <img src="./assets/images/movie-ranking.jpg" height="200 alt="movie ranking image" />
+        <img src="./assets/images/movie-ranking.jpg" height="200" alt="movie ranking image" />
     </p>
    <h3><a href="./public/birthday-invite.html" draggable="true">Birthday Invite Project</a></h3>
     <br/>
